<resources>
    <string name="app_name">NickTest</string>
    <string name="my_profile">My Profile</string>
    <string name="all_users">All Users</string>
    <string name="about_us">About us</string>
    <string name="title_activity_settings">Settings</string>
    <string name="requests">Requests</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="nicks">Nicks</string>
    <string name="default_status">I\'m new on Nicks.</string>
    <string name="logout">Logout</string>
    <string name="how_s_you_feeling">How\'s you feeling ?</string>
    <string name="online">Online</string>
    <string name="send_message">Send Message</string>
    <string name="type_your_message">Type your message...</string>
    <string name="add_contents">Add Contents</string>
    <string name="list_of_messages">List of Messages</string>
    <string name="send_request">Send Request</string>
    <string name="decline_request">Decline Request</string>


</resources>
