<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:focusableInTouchMode="true"
    tools:context=".ChatActivity">

    <include
        android:id="@+id/chat_app_bar"
        layout="@layout/app_bar_layout" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/message_swipe_layout"
        android:layout_above="@+id/textContainer"
        android:layout_below="@+id/chat_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/messages_recycler_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textContainer"
            android:layout_below="@+id/chat_app_bar"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/list_of_messages"
            android:orientation="vertical">

        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/button_bg"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageButton
            android:id="@+id/chat_add_attachments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/add_contents"
            android:padding="10dp"
            android:src="@drawable/ic_playlist_add_black_24dp" />

        <EditText
            android:id="@+id/chat_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:background="#00000000"
            android:ems="10"
            android:hint="@string/type_your_message"
            android:imeOptions="actionSend"
            android:inputType="textLongMessage"
            android:maxLines="1"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="14dp"
            android:singleLine="true"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/chat_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/send_message"
            android:padding="10dp"
            android:src="@drawable/ic_send_black_24dp" />

    </LinearLayout>


</RelativeLayout>

