<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_root_layout"
    tools:context=".UserProfileActivity">


    <ImageView
        android:id="@+id/user_profile_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_user" />

    <LinearLayout
        android:id="@+id/profile_containerOne"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/user_profile_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="User Name"
            android:fontFamily="@font/neuzietregular"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_profile_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuzietregular"
            android:textStyle="normal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/default_status"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/user_profile_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text=""
            android:fontFamily="@font/neuzietregular"
            android:textStyle="bold"
            android:textSize="13sp" />

        <Button
            android:id="@+id/send_request_button"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/send_request"
            android:fontFamily="@font/neuzietregular"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <Button
            android:id="@+id/decline_request_button"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/decline_request"
            android:textAllCaps="false"
            android:fontFamily="@font/neuzietregular"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9fffffff"
        android:elevation="5dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />

    </RelativeLayout>

</RelativeLayout>